--- a/projetosWeb/rh/css/style.css
+++ b/projetosWeb/rh/css/style.css
@@ -1,1 +1,1 @@
-.painel{background-color:#33f7ab}.painel p{color:#f0e}.painel .novo{color:#ff0}
+.principal{background-color:#f5f5f5;font-size:62.5%}.img-center{margin:0 auto}.form-rh{width:600px;height:auto;display:block;margin-left:auto;margin-right:auto;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;border-radius:5px;border:1px solid rgba(51,122,183,.5);font-size:1.4em;background-color:#FFF;padding:20px}.form-rh label{color:#777}
